--- a/proposal/proposal.Rmd
+++ b/proposal/proposal.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Project proposal"
-author: "Team name"
+title: "How do"
+author: "Lab rats"
 output: github_document
 ---
 
@@ -10,13 +10,13 @@ library(broom)
 ```
 
 ## 1. Introduction
-Our group had a common interest in public health and though the topic would have ample opportunity for data analysis.  
-We were able to find large data sets on world suicide mortality rates, but wanted to know what environmental factors contributed to higher or lower rates in countries.
-We decided that comparing suicide rates to World Happiness scores would allow us to see how the data narrates mental health for each country, and what specific variables show large contribution. WHS included many independent variables, such as GDP, family sixe, trust in government, generosity, etc.
- We agreed that GDP would allow us to see exactly how economy affects peoples' happiness, and therefor increase or decrease rates of happiness. 
+Our group had a common interest in public health and thought the topic would have ample opportunity for data analysis. 
+We were able to find large data sets on suicide mortality rates from around the world, but wanted to know what factors contributed to higher or lower suicide rates in various countries.
+We decided that comparing suicide rates to World Happiness Report (WHR) scores would allow us to see how the data narrates mental health for each country, and what specific variables show large contribution. WHR includes many independent variables, such as GDP per capita, family size, trust in government, generosity, etc.
+We agreed that GDP per capita would allow us to see exactly how economy affects peoples' happiness, and therefore increase or decrease rates of happiness. 
 
-General question: How does world happiness rankings of countries correlate to their respective suicide mortality rate?
-Side Quest: How does economy impact happiness, and does that data correlate with high or low rates of suicide mortality?
+Primary research question: How does the ranking of a certain country on the World Happiness Report correlate with their respective suicide mortality rate?
+Secondary research question: How does GDP per capita impact happiness, and to what extent does that data correlate with suicide mortality rates?
 
 
 ## 2. Data
