--- a/proposal/proposal.Rmd
+++ b/proposal/proposal.Rmd
@@ -30,18 +30,20 @@ Possible color code for continent/region
 Variables we will consider for our analysis: 
 
 World Happiness Report dataset, for the years between 2015-2019: 
-$ Country                         
-$ Region                          
+$ `Country`                         
+$ `Region`                          
 $ `Happiness Rank`                
 $ `Happiness Score`               
 $ `Standard Error`                
 $ `Economy (GDP per Capita)`      
-$ Family                          
+$ `Family`                         
 $ `Health (Life Expectancy)`      
-$ Freedom                         
+$ `Freedom`                         
 $ `Trust (Government Corruption)` 
 $ Generosity                      
 $ `Dystopia Residual`
 
-World Suicide rates dataset: 
+World Suicide rates dataset,  for the years between 2015-2019: 
+
+Initially, we would also like to make an analysis associanting light exposure to the happiness index and suicide rates. However, in our preliminary research so far we could not find a dataset with this information byt country. We will continue the research to see if it is possible to add this variable from another dataset. 
 
