--- a/README.Rmd
+++ b/README.Rmd
@@ -25,11 +25,11 @@ And make sure to hide your code with  `echo = FALSE` unless the point you are tr
 Your results with proper output and graphics go in your presentation, this space is for a brief summary of your project.
 
 ```{r load-data, echo = FALSE}
-whr_df_2015 <- read_csv("data/whr_2015.csv")
-whr_df_2016 <- read_csv("data/whr_2016.csv")
-whr_df_2017 <- read_csv("data/whr_2017.csv")
-whr_df_2018 <- read_csv("data/whr_2018.csv")
-whr_df_2019 <- read_csv("data/whr_2019.csv")
+whr_2015 <- read_csv("data/whr_2015.csv")
+whr_2016 <- read_csv("data/whr_2016.csv")
+whr_2017 <- read_csv("data/whr_2017.csv")
+whr_2018 <- read_csv("data/whr_2018.csv")
+whr_2019 <- read_csv("data/whr_2019.csv")
 suicide <- read_csv("data/suicide_2000_2019_v1.csv")
 ```
 
