--- a/README.Rmd
+++ b/README.Rmd
@@ -1,6 +1,6 @@
 ---
-title: 
-author: Lab rats
+title: "The Relationship Between World Happiness Report Scores and WHO Country Suicide Rates - an Analysis"
+author: "Lab rats"
 output: github_document
 ---
 
