--- a/README.Rmd
+++ b/README.Rmd
@@ -31,6 +31,7 @@ whr_2017 <- read_csv("data/whr_2017.csv")
 whr_2018 <- read_csv("data/whr_2018.csv")
 whr_2019 <- read_csv("data/whr_2019.csv")
 suicide <- read_csv("data/suicide_2000_2019_v1.csv")
+suicide_2 <- read_csv("data/World_Suicide_rates.csv")
 ```
 
 ## Presentation
@@ -39,6 +40,11 @@ suicide <- read_csv("data/suicide_2000_2019_v1.csv")
 suicide <- suicide %>%
   mutate(Country = case_when(Country %in% "Syrian Arab Republic" ~ "Syria",
                              TRUE ~ Country))
+
+whr_2015 <- whr_2015 %>%
+  rename("Social support" = "Family")
+
+
 ```
 
 ## Data 
