--- a/README.Rmd
+++ b/README.Rmd
@@ -43,6 +43,9 @@ whr_2015 <- whr_2015 %>%
 ```{r tidy-data-2016}
 whr_2016 <- whr_2016 %>%
   mutate(Year = 2016)
+
+whr_2016 <- select(whr_2016, -c(Region, `Lower Confidence Interval`, 
+                                 `Upper Confidence Interval`, `Dystopia Residual`))
 ```
 
 ```{r tidy-data-2017}
