--- a/README.Rmd
+++ b/README.Rmd
@@ -39,7 +39,7 @@ suicide <- read_csv("data/suicide_2000_2019_v1.csv")
 
 whr_2015 <- whr_2015 %>%
   mutate(Year = 2015) %>% 
-    # subset(select = -c(`Standard Error`,`Dystopia Residual`)) %>%
+   subset(select = -c(`Standard Error`,`Dystopia Residual`)) %>%
    rename("Social Support"= "Family")
 
 ```
@@ -47,12 +47,15 @@ whr_2015 <- whr_2015 %>%
 ```{r tidy-data-2016}
 whr_2016 <- whr_2016 %>%
   mutate(Year = 2016) %>%
-  subset(select = -c(`Region`, `Lower Confidence Interval`, `Upper Confidence Interval`, `Dystopia Residual`))
+  subset(select = -c(`Lower Confidence Interval`, `Upper Confidence Interval`, `Dystopia Residual`)) %>%
+     rename("Social Support"= "Family")
 ```
 
 ```{r tidy-data-2017}
 whr_2017 <- whr_2017 %>%
-  mutate(Year = 2017)
+  mutate(Year = 2017)%>%
+  subset(select = -c(`Whisker.low`, `Whisker.high`, `Dystopia.Residual`)) %>%
+     rename("Social Support"= "Family")
 ```
 
 ```{r tidy-data-2018}
