--- a/README.Rmd
+++ b/README.Rmd
@@ -49,6 +49,13 @@ whr_2016 <- whr_2016 %>%
 whr_2017 <- whr_2017 %>%
   mutate(Year = 2017)
 ```
+```{r tidy-columns-2017}
+whr_2017 <- whr_2017 %>%
+  rename("Social Support" = "Family") %>%
+  subset(select = -c(Whisker.high, Whisker.low))
+```
+
+```
 
 ```{r tidy-data-2018}
 whr_2018 <- whr_2018 %>% 
@@ -57,7 +64,8 @@ whr_2018 <- whr_2018 %>%
 
 ```{r tidy-data-2019}
 whr_2019 <- whr_2019 %>% 
-  mutate (Year = 2019)
+  mutate (Year = 2019) %>%
+  rename("Freedom" = "Freedom to make life choices" )
 ```
 
 ## Presentation
@@ -68,7 +76,7 @@ suicide <- suicide %>%
                              TRUE ~ Country))
 
 whr_2015 <- whr_2015 %>%
-  rename("Social support" = "Family")
+  rename("Social Support" = "Family")
 
 
 ```
