--- a/README.Rmd
+++ b/README.Rmd
@@ -67,13 +67,19 @@ whr_2017 <- whr_2017 %>%
 
 ```{r tidy-data-2018}
 whr_2018 <- whr_2018 %>% 
-  mutate (Year = 2018)
+  mutate (Year = 2018) %>%
+```{r tidy_data_2018}
+whr_2018 <- whr_2018 %>% 
+  mutate (Year = 2018) %>%
+  rename("Freedom" = "Freedom to make life choices")
+```
+  
 ```
 
 ```{r tidy-data-2019}
 whr_2019 <- whr_2019 %>% 
   mutate (Year = 2019) %>%
-  rename("Freedom" = "Freedom to make life choices" )
+  rename("Freedom" = "Freedom to make life choices")
 ```
 
 ## Presentation
