--- a/README.Rmd
+++ b/README.Rmd
@@ -57,29 +57,23 @@ whr_2017 <- whr_2017 %>%
   subset(select = -c(`Whisker.low`, `Whisker.high`, `Dystopia.Residual`)) %>%
      rename("Social Support"= "Family")
 ```
-```{r tidy-columns-2017}
-whr_2017 <- whr_2017 %>%
-  rename("Social Support" = "Family") %>%
-  subset(select = -c(Whisker.high, Whisker.low))
-```
 
-```
 
 ```{r tidy-data-2018}
 whr_2018 <- whr_2018 %>% 
   mutate (Year = 2018) %>%
-```{r tidy_data_2018}
-whr_2018 <- whr_2018 %>% 
-  mutate (Year = 2018) %>%
-  rename("Freedom" = "Freedom to make life choices")
+  rename("Freedom" = "Freedom to make life choices")%>%
+  rename("Trust (Government Corruption)" = "Perceptions of corruption")
+
 ```
   
-```
 
 ```{r tidy-data-2019}
 whr_2019 <- whr_2019 %>% 
   mutate (Year = 2019) %>%
-  rename("Freedom" = "Freedom to make life choices")
+  rename("Freedom" = "Freedom to make life choices")%>%
+  rename("Trust (Government Corruption)" = "Perceptions of corruption") 
+
 ```
 
 ## Presentation
@@ -89,8 +83,8 @@ suicide <- suicide %>%
   mutate(Country = case_when(Country %in% "Syrian Arab Republic" ~ "Syria",
                              TRUE ~ Country))
 
-whr_2015 <- whr_2015 %>%
-  rename("Social Support" = "Family")
+# whr_2015 <- whr_2015 %>%
+#   rename("Social Support" = "Family")
 
 
 ```
