--- a/README.Rmd
+++ b/README.Rmd
@@ -57,30 +57,27 @@ whr_2017 <- whr_2017 %>%
   subset(select = -c(`Whisker.low`, `Whisker.high`, `Dystopia.Residual`)) %>%
      rename("Social Support"= "Family")
 ```
+
 ```{r tidy-columns-2017}
 whr_2017 <- whr_2017 %>%
   rename("Social Support" = "Family") %>%
   subset(select = -c(Whisker.high, Whisker.low))
 ```
 
-```
 
 ```{r tidy-data-2018}
 whr_2018 <- whr_2018 %>% 
-  mutate (Year = 2018) %>%
-```{r tidy_data_2018}
-whr_2018 <- whr_2018 %>% 
-  mutate (Year = 2018) %>%
-  rename("Freedom" = "Freedom to make life choices")
+  mutate (Year = 2018)
 ```
   
-```
+
 
 ```{r tidy-data-2019}
 whr_2019 <- whr_2019 %>% 
   mutate (Year = 2019) %>%
   rename("Freedom" = "Freedom to make life choices")
 ```
+
 
 ## Presentation
 
