--- a/README.Rmd
+++ b/README.Rmd
@@ -39,39 +39,37 @@ suicide <- read_csv("data/suicide_2000_2019_v1.csv")
 
 whr_2015 <- whr_2015 %>%
   mutate(Year = 2015) %>% 
-<<<<<<< HEAD
-  subset(select = -c(`Standard Error`, `Dystopia Residual`))
-=======
    subset(select = -c(`Standard Error`,`Dystopia Residual`)) %>%
-   rename("Social Support"= "Family")
-
->>>>>>> 210f5145c2d593e9f3d29f9a8e35c7f992bde692
+   rename("Social Support" = "Family")
 ```
 
 ```{r tidy-data-2016}
 whr_2016 <- whr_2016 %>%
   mutate(Year = 2016) %>%
-  subset(select = -c(`Lower Confidence Interval`, `Upper Confidence Interval`, `Dystopia Residual`)) %>%
-     rename("Social Support"= "Family")
+  #subset(select = -c(`Lower Confidence Interval`, `Upper Confidence Interval`, `Dystopia Residual`)) %>%
+     #rename("Social support"= "Family") %>%
+  #rename("Perceptions of corruption" = "Trust (Government Corruption)") %>%
+  #rename("Overall rank" = "Happiness Rank") %>%
+  #rename("Happiness score" = "Happiness Score") %>%
+  #rename("GDP per capita" = "Economy (GDP per Capita)") %>%
+  #rename("Life expectancy" = "Health (Life Expectancy)")
 ```
 
 ```{r tidy-data-2017}
 whr_2017 <- whr_2017 %>%
   mutate(Year = 2017)%>%
   subset(select = -c(`Whisker.low`, `Whisker.high`, `Dystopia.Residual`)) %>%
-     rename("Social Support"= "Family")
+     rename("Social Support"= "Family") %>%
+  rena
 ```
-
 
 ```{r tidy-data-2018}
 whr_2018 <- whr_2018 %>% 
   mutate (Year = 2018) %>%
-  rename("Freedom" = "Freedom to make life choices")%>%
+  rename("Freedom" = "Freedom to make life choices") %>%
   rename("Trust (Government Corruption)" = "Perceptions of corruption")
-
 ```
   
-
 ```{r tidy-data-2019}
 whr_2019 <- whr_2019 %>% 
   mutate (Year = 2019) %>%
