Tidy WHR 2017 variables

--- a/README.Rmd
+++ b/README.Rmd
@@ -54,8 +54,13 @@ whr_2016 <- whr_2016 %>%
 ```{r tidy-data-2017}
 whr_2017 <- whr_2017 %>%
   mutate(Year = 2017)%>%
-  subset(select = -c(`Whisker.low`, `Whisker.high`, `Dystopia.Residual`)) %>%
-     rename("Social Support"= "Family")
+  #subset(select = -c(`Dystopia.Residual`)) %>%
+     #rename("Social Support"= "Family") %>%
+           rename("Happiness rank" = "Happiness.Rank") %>%
+            rename("Happiness score" = "Happiness.Score") %>%
+            rename("GDP per capita" = "Economy..GDP.per.Capita.") %>%
+            rename("Life expectancy" = "Health..Life.Expectancy.") %>%
+            rename("Perceptions of corruption" = "Trust..Government.Corruption.")
 ```
 
 ```{r tidy-columns-2017}
