--- a/README.Rmd
+++ b/README.Rmd
@@ -42,11 +42,11 @@ whr_2015 <- whr_2015 %>%
   # subset(select = -c(`Standard Error`, `Dystopia Residual`)) %>%
    # rename("Social support" = "Family") %>%
    # rename("Perceptions of corruption" = "Trust (Government Corruption)") %>%
-  rename("Social support" = "Social Support",
-         "GDP per capita" = "Economy (GDP per Capita)" ,
-         "Overall rank" = "Happiness Rank", 
-         "Life expectancy" = "Health (Life Expectancy)")
-  
+  # rename("Social support" = "Social Support") %>%
+  # rename( "GDP per capita" = "Economy (GDP per Capita)" ,
+  #        "Overall rank" = "Happiness Rank", 
+  #        "Life expectancy" = "Health (Life Expectancy)")
+         
 ```
 
 ```{r tidy-data-2016}
@@ -67,8 +67,10 @@ whr_2017 <- whr_2017 %>%
 ```{r tidy-data-2018}
 whr_2018 <- whr_2018 %>% 
   mutate (Year = 2018) %>%
-  rename("Freedom" = "Freedom to make life choices")%>%
-  rename("Trust (Government Corruption)" = "Perceptions of corruption")
+  # rename("Freedom" = "Freedom to make life choices")%>%
+  rename("Life expectancy" = "Healthy life expectancy", 
+         "Country" = "Country or region", 
+         "Happiness score" = "Score")
 
 ```
   
@@ -76,8 +78,10 @@ whr_2018 <- whr_2018 %>%
 ```{r tidy-data-2019}
 whr_2019 <- whr_2019 %>% 
   mutate (Year = 2019) %>%
-  rename("Freedom" = "Freedom to make life choices")%>%
-  rename("Trust (Government Corruption)" = "Perceptions of corruption") 
+  # rename("Freedom" = "Freedom to make life choices")%>%
+  rename("Country" = "Country or region", 
+         "Life expectancy" = "Healthy life expectancy", 
+         "Happiness score" = "Score") 
 
 ```
 
