--- a/README.Rmd
+++ b/README.Rmd
@@ -37,33 +37,34 @@ suicide <- read_csv("data/suicide_2000_2019_v1.csv")
 
 ```{r tidy-data-2015}
 whr_2015 <- whr_2015 %>%
-  mutate(Year = 2015) %>% 
+  # mutate(Year = 2015) %>% 
    #subset(select = -c(`Standard Error`,`Dystopia Residual`)) %>%
    #rename("Social Support" = "Family") %>%
-    rename("Perceptions of corruption" = "Trust (Government Corruption)") %>%
+    # rename("Perceptions of corruption" = "Trust (Government Corruption)") %>%
    #rename("Social support" = "Social Support") %>%
-   rename( "GDP per capita" = "Economy (GDP per Capita)",
-          "Overall rank" = "Happiness Rank", 
-          "Life expectancy" = "Health (Life Expectancy)")
+   # # rename("GDP per capita" = "Economy (GDP per Capita)",
+   #        "Overall rank" = "Happiness Rank", 
+   #        "Life expectancy" = "Health (Life Expectancy)") %>%
+  rename("Happiness score" = "Happiness Score")
 ```
 
 ```{r tidy-data-2016}
-#whr_2016 <- whr_2016 %>%
-  #mutate(Year = 2016) %>%
-  #subset(select = -c(`Lower Confidence Interval`, `Upper Confidence Interval`, `Dystopia Residual`)) %>%
-     #rename("Social support"= "Family") %>%
-  #rename("Perceptions of corruption" = "Trust (Government Corruption)") %>%
-  #rename("Overall rank" = "Happiness Rank") %>%
-  #rename("Happiness score" = "Happiness Score") %>%
-  #rename("GDP per capita" = "Economy (GDP per Capita)") %>%
-  #rename("Life expectancy" = "Health (Life Expectancy)")
+whr_2016 <- whr_2016 %>%
+mutate(Year = 2016) %>%
+# subset(select = -c(`Lower Confidence Interval`, `Upper Confidence Interval`, `Dystopia Residual`)) %>%
+# rename("Social support"= "Family") %>%
+rename("Perceptions of corruption" = "Trust (Government Corruption)") %>%
+rename("Overall rank" = "Happiness Rank") %>%
+rename("Happiness score" = "Happiness Score") %>%
+rename("GDP per capita" = "Economy (GDP per Capita)") %>%
+rename("Life expectancy" = "Health (Life Expectancy)")
 ```
 
 ```{r tidy-data-2017}
-whr_2017 <- whr_2017 %>%
-  mutate(Year = 2017)%>%
-  subset(select = -c(`Whisker.low`, `Whisker.high`, `Dystopia.Residual`)) %>%
-     rename("Social Support"= "Family") %>%
+# whr_2017 <- whr_2017 %>%
+#   mutate(Year = 2017)%>%
+  # subset(select = -c(`Whisker.low`, `Whisker.high`, `Dystopia.Residual`)) %>%
+     # rename("Social Support"= "Family")
 ```
 
 ```{r tidy-data-2018}
