--- a/README.Rmd
+++ b/README.Rmd
@@ -62,14 +62,14 @@ rename("Life expectancy" = "Health (Life Expectancy)")
 
 ```{r tidy-data-2017}
 whr_2017 <- whr_2017 %>%
-  mutate(Year = 2017)%>%
-  #subset(select = -c(`Whisker.high`,`Whisker.low`, `Dystopia.Residual`)) %>%
+  #mutate(Year = 2017)%>%
+  subset(select = -c(`Whisker.high`,`Whisker.low`,`Dystopia.Residual`)) #%>%
      #rename("Social Support"= "Family") %>%
-           rename("Happiness rank" = "Happiness.Rank") %>%
-            rename("Happiness score" = "Happiness.Score") %>%
-            rename("GDP per capita" = "Economy..GDP.per.Capita.") %>%
-            rename("Life expectancy" = "Health..Life.Expectancy.") %>%
-            rename("Perceptions of corruption" = "Trust..Government.Corruption.")
+           #rename("Happiness rank" = "Happiness.Rank") %>%
+            #rename("Happiness score" = "Happiness.Score") %>%
+            #rename("GDP per capita" = "Economy..GDP.per.Capita.") %>%
+            #rename("Life expectancy" = "Health..Life.Expectancy.") %>%
+            #rename("Perceptions of corruption" = "Trust..Government.Corruption.")
 ```
 
 ```{r tidy-columns-2017}
