--- a/README.Rmd
+++ b/README.Rmd
@@ -45,19 +45,21 @@ whr_2015 <- whr_2015 %>%
    # # rename("GDP per capita" = "Economy (GDP per Capita)",
    #        "Overall rank" = "Happiness Rank", 
    #        "Life expectancy" = "Health (Life Expectancy)") %>%
-  rename("Happiness score" = "Happiness Score")
+  # rename("Happiness score" = "Happiness Score") %>% 
+  subset(select = -c(`Region`))
 ```
 
 ```{r tidy-data-2016}
 whr_2016 <- whr_2016 %>%
-mutate(Year = 2016) %>%
+# mutate(Year = 2016) %>%
 # subset(select = -c(`Lower Confidence Interval`, `Upper Confidence Interval`, `Dystopia Residual`)) %>%
 # rename("Social support"= "Family") %>%
-rename("Perceptions of corruption" = "Trust (Government Corruption)") %>%
-rename("Overall rank" = "Happiness Rank") %>%
-rename("Happiness score" = "Happiness Score") %>%
-rename("GDP per capita" = "Economy (GDP per Capita)") %>%
-rename("Life expectancy" = "Health (Life Expectancy)")
+# rename("Perceptions of corruption" = "Trust (Government Corruption)") %>%
+# rename("Overall rank" = "Happiness Rank") %>%
+# rename("Happiness score" = "Happiness Score") %>%
+# rename("GDP per capita" = "Economy (GDP per Capita)") %>%
+# rename("Life expectancy" = "Health (Life Expectancy)") %>%
+  subset(select = -c(`Region`))
 ```
 
 ```{r tidy-data-2017}
@@ -100,8 +102,6 @@ suicide <- suicide %>%
   mutate(Country = case_when(Country %in% "Syrian Arab Republic" ~ "Syria",
                              TRUE ~ Country))
 
-# whr_2015 <- whr_2015 %>%
-#   rename("Social Support" = "Family")
 ```
 
 ## Data 
