--- a/README.Rmd
+++ b/README.Rmd
@@ -62,19 +62,19 @@ rename("Life expectancy" = "Health (Life Expectancy)")
 
 ```{r tidy-data-2017}
 whr_2017 <- whr_2017 %>%
-  #mutate(Year = 2017)%>%
-  #subset(select = -c(`Whisker.high`,`Whisker.low`,`Dystopia.Residual`)) #%>%
+  mutate(Year = 2017)%>%
+  #rmsubset(select = -c(`Whisker.high`,`Whisker.low`,`Dystopia.Residual`)) %>%
      #rename("Social Support"= "Family") %>%
-           rename("Overall rank" = "Happiness rank") 
-            #rename("Happiness score" = "Happiness.Score") %>%
-            #rename("GDP per capita" = "Economy..GDP.per.Capita.") %>%
-            #rename("Life expectancy" = "Health..Life.Expectancy.") %>%
-            #rename("Perceptions of corruption" = "Trust..Government.Corruption.")
+           #rename("Overall rank" = "Happiness.Rank") %>%
+            rename("Happiness score" = "Happiness.Score") %>%
+            rename("GDP per capita" = "Economy..GDP.per.Capita.") %>%
+            rename("Life expectancy" = "Health..Life.Expectancy.") %>%
+            rename("Perceptions of corruption" = "Trust..Government.Corruption.")
 ```
 
 ```{r tidy-data-2018}
 whr_2018 <- whr_2018 %>% 
-  mutate (Year = 2018) %>%
+  mutate (Year = 2018) #%>%
   # rename("Freedom" = "Freedom to make life choices")%>%
   rename("Life expectancy" = "Healthy life expectancy", 
          "Country" = "Country or region", 
