--- a/README.Rmd
+++ b/README.Rmd
@@ -64,14 +64,11 @@ whr_2016 <- whr_2016 %>%
 
 ```{r tidy-data-2017}
 whr_2017 <- whr_2017 %>%
-<<<<<<< HEAD
   mutate(Year = 2017)%>%
-  #rmsubset(select = -c(`Whisker.high`,`Whisker.low`,`Dystopia.Residual`)) %>%
-=======
+  #subset(select = -c(`Whisker.high`,`Whisker.low`,`Dystopia.Residual`)) %>%
   #mutate(Year = 2017)%>%
    # subset(select = -c(`Whisker.high`,`Whisker.low`,`Dystopia.Residual`)) #%>%
->>>>>>> 5e18136d30d4adb994e8bf54a536938460cf5c0a
-     #rename("Social Support"= "Family") %>%
+    #rename("Social Support"= "Family") %>%
            #rename("Overall rank" = "Happiness.Rank") %>%
             rename("Happiness score" = "Happiness.Score") %>%
             rename("GDP per capita" = "Economy..GDP.per.Capita.") %>%
