--- a/README.Rmd
+++ b/README.Rmd
@@ -7,6 +7,7 @@ output: github_document
 ```{r}
 #install.packages("tidyverse")
 library(tidyverse)
+library(janitor)
 ```
 
 ## Summary
@@ -46,7 +47,8 @@ whr_2015 <- whr_2015 %>%
    #        "Overall rank" = "Happiness Rank", 
    #        "Life expectancy" = "Health (Life Expectancy)") %>%
   # rename("Happiness score" = "Happiness Score") %>% 
-  subset(select = -c(`Region`))
+  # subset(select = -c(`Region`)) %>%
+  clean_names()
 ```
 
 ```{r tidy-data-2016}
@@ -59,42 +61,42 @@ whr_2016 <- whr_2016 %>%
 # rename("Happiness score" = "Happiness Score") %>%
 # rename("GDP per capita" = "Economy (GDP per Capita)") %>%
 # rename("Life expectancy" = "Health (Life Expectancy)") %>%
-  subset(select = -c(`Region`))
+  # subset(select = -c(`Region`)) %>%
+  clean_names()
 ```
 
 ```{r tidy-data-2017}
 whr_2017 <- whr_2017 %>%
-<<<<<<< HEAD
   mutate(Year = 2017)%>%
-  #rmsubset(select = -c(`Whisker.high`,`Whisker.low`,`Dystopia.Residual`)) %>%
-=======
-  #mutate(Year = 2017)%>%
-   # subset(select = -c(`Whisker.high`,`Whisker.low`,`Dystopia.Residual`)) #%>%
->>>>>>> 5e18136d30d4adb994e8bf54a536938460cf5c0a
+  # subset(select = -c(`Whisker.high`,`Whisker.low`,`Dystopia.Residual`)) %>%
      #rename("Social Support"= "Family") %>%
            #rename("Overall rank" = "Happiness.Rank") %>%
-            rename("Happiness score" = "Happiness.Score") %>%
-            rename("GDP per capita" = "Economy..GDP.per.Capita.") %>%
-            rename("Life expectancy" = "Health..Life.Expectancy.") %>%
-            rename("Perceptions of corruption" = "Trust..Government.Corruption.")
+            # rename("Happiness score" = "Happiness.Score") %>%
+            # rename("GDP per capita" = "Economy..GDP.per.Capita.") %>%
+            # rename("Life expectancy" = "Health..Life.Expectancy.") %>%
+            # rename("Perceptions of corruption" = "Trust..Government.Corruption.") %>%
+  clean_names()
+  
 ```
 
 ```{r tidy-data-2018}
 whr_2018 <- whr_2018 %>% 
-  mutate (Year = 2018) #%>%
+  # mutate (Year = 2018) #%>%
   # rename("Freedom" = "Freedom to make life choices")%>%
-  rename("Life expectancy" = "Healthy life expectancy", 
-         "Country" = "Country or region", 
-         "Happiness score" = "Score")
+  # rename("Life expectancy" = "Healthy life expectancy", 
+  #        "Country" = "Country or region", 
+  #        "Happiness score" = "Score") %>%
+    clean_names()
 ```
 
 ```{r tidy-data-2019}
 whr_2019 <- whr_2019 %>% 
   mutate (Year = 2019) %>%
   # rename("Freedom" = "Freedom to make life choices")%>%
-  rename("Country" = "Country or region", 
-         "Life expectancy" = "Healthy life expectancy", 
-         "Happiness score" = "Score") 
+  # rename("Country" = "Country or region", 
+  #        "Life expectancy" = "Healthy life expectancy", 
+  #        "Happiness score" = "Score") %>%
+  clean_names()
 
 ```
 
