--- a/README.Rmd
+++ b/README.Rmd
@@ -47,7 +47,7 @@ whr_2015 <- whr_2015 %>%
    #        "Overall rank" = "Happiness Rank", 
    #        "Life expectancy" = "Health (Life Expectancy)") %>%
   # rename("Happiness score" = "Happiness Score") %>% 
-   subset(select = -c(`region`)) %>%
+   # subset(select = -c(`region`)) %>%
   clean_names()
 ```
 
@@ -101,7 +101,7 @@ whr_2019 <- whr_2019 %>%
 ```
 
 ```{r suicide-tidy-data}
-suicide <- suicide %>%
+# suicide <- suicide %>%
   
 ```
 
