--- a/README.Rmd
+++ b/README.Rmd
@@ -69,7 +69,7 @@ whr_2016 <- whr_2016 %>%
 whr_2017 <- whr_2017 %>%
   mutate(Year = 2017)%>%
   # subset(select = -c(`Whisker.high`,`Whisker.low`,`Dystopia.Residual`)) %>%
-     #rename("Social Support"= "Family") %>%
+     rename("Social Support"= "family") %>%
            #rename("Overall rank" = "Happiness.Rank") %>%
             # rename("Happiness score" = "Happiness.Score") %>%
             # rename("GDP per capita" = "Economy..GDP.per.Capita.") %>%
