--- a/README.Rmd
+++ b/README.Rmd
@@ -48,7 +48,7 @@ whr_2015 <- whr_2015 %>%
    #        "Life expectancy" = "Health (Life Expectancy)") %>%
   # rename("Happiness score" = "Happiness Score") %>% 
    # subset(select = -c(`region`)) %>%
-  clean_names()
+  clean_names() %>%
 ```
 
 ```{r tidy-data-2016}
