--- a/README.Rmd
+++ b/README.Rmd
@@ -94,6 +94,11 @@ whr_2017 <- whr_2017 %>%
 
 ```
 
+```{r reordering-cols-2017}
+whr_2017 <- whr_2017 %>% 
+  select(c (overall_rank, country,happiness_score, gdp_per_capita,social_support, life_expectancy, freedom, generosity, perceptions_of_corruption, year ))
+```
+
 ```{r tidy-data-2018}
 whr_2018 <- whr_2018 %>% 
   mutate (Year = 2018) %>%
